--- a/TV Shows/TV Shows/Screens/Login/Login.storyboard
+++ b/TV Shows/TV Shows/Screens/Login/Login.storyboard
@@ -5,7 +5,6 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -20,7 +19,7 @@
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Cu9-n9-kO2">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                                 <subviews>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pLi-qf-P0g">
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pLi-qf-P0g" userLabel="contentView">
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="splash-top-left" translatesAutoresizingMaskIntoConstraints="NO" id="sXF-Kz-ogN" userLabel="splashTopLeftImageView">
@@ -198,7 +197,7 @@
                                         </constraints>
                                     </view>
                                 </subviews>
-                                <color key="backgroundColor" systemColor="systemRedColor"/>
+                                <color key="backgroundColor" red="0.32156862749999998" green="0.21176470589999999" blue="0.54901960780000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstItem="pLi-qf-P0g" firstAttribute="top" secondItem="Cu9-n9-kO2" secondAttribute="top" id="FfR-zd-GpG"/>
                                     <constraint firstAttribute="trailing" secondItem="pLi-qf-P0g" secondAttribute="trailing" id="ZHR-dG-MgQ"/>
@@ -225,6 +224,7 @@
                         <outlet property="passwordTextfield" destination="0H1-4P-1VG" id="3e9-qC-cew"/>
                         <outlet property="registerButton" destination="rNK-QV-aFX" id="eam-e2-zuy"/>
                         <outlet property="rememberCheckButton" destination="XB9-jh-37r" id="wNh-tY-PrF"/>
+                        <outlet property="scrollView" destination="Cu9-n9-kO2" id="Sjg-SS-WXc"/>
                         <outlet property="seePasswordButton" destination="TAu-JY-MXj" id="vUq-t8-cUW"/>
                     </connections>
                 </viewController>
@@ -258,8 +258,5 @@
         <image name="logo-white" width="162" height="38"/>
         <image name="splash-top-left" width="140" height="100"/>
         <image name="splash-top-right" width="202" height="266"/>
-        <systemColor name="systemRedColor">
-            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
     </resources>
 </document>
