--- a/TV Shows/TV Shows/Screens/ShowDetails/ShowDetails.storyboard
+++ b/TV Shows/TV Shows/Screens/ShowDetails/ShowDetails.storyboard
@@ -132,6 +132,34 @@
                                             <outlet property="ratingView" destination="ffm-bJ-M3L" id="mRS-dk-ZCg"/>
                                         </connections>
                                     </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ShowDetailNoReviewsTableViewCell" rowHeight="140" id="R7f-Hl-orw" userLabel="ShowDetailNoReviewsTableViewCell">
+                                        <rect key="frame" x="0.0" y="764.5" width="414" height="140"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="R7f-Hl-orw" id="E0Q-g2-gE7">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="140"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Reviews" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zSV-ao-cUh">
+                                                    <rect key="frame" x="20" y="10" width="85.5" height="26.5"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="22"/>
+                                                    <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No reviews yet" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fQd-iU-FqJ">
+                                                    <rect key="frame" x="151" y="59.5" width="112" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="zSV-ao-cUh" firstAttribute="top" secondItem="E0Q-g2-gE7" secondAttribute="top" constant="10" id="0kU-rD-Uob"/>
+                                                <constraint firstItem="zSV-ao-cUh" firstAttribute="leading" secondItem="E0Q-g2-gE7" secondAttribute="leading" constant="20" id="BT8-hh-VdO"/>
+                                                <constraint firstItem="fQd-iU-FqJ" firstAttribute="centerY" secondItem="E0Q-g2-gE7" secondAttribute="centerY" id="leB-ZN-34e"/>
+                                                <constraint firstItem="fQd-iU-FqJ" firstAttribute="centerX" secondItem="E0Q-g2-gE7" secondAttribute="centerX" id="me2-ea-CSQ"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
                                 </prototypes>
                                 <connections>
                                     <outlet property="dataSource" destination="Y6W-OH-hqX" id="wTz-vz-5rq"/>
